--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,8 @@
     }
 
     .contact-submit-btn {
+        background-color: #f59e42;
+        color: #fff;
         font-size: 1.25rem;
         font-weight: 700;
         padding: 1rem 2.5rem;
